--- a/src/client/index.html
+++ b/src/client/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
   </head>
   <body>
-    <div id="app" />
+    <div id="app" class='nav'/>
     <script src="public/bundle.js" type="text/javascript"></script>
         <!-- jQuery -->
     <script src="public/js/jquery.js"></script>
@@ -20,10 +20,10 @@
 
     <!-- Menu Toggle Script -->
     <script>
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#wrapper").toggleClass("toggled");
-    });
+    // $("#menu-toggle").click(function(e) {
+    //     e.preventDefault();
+    //     $("#wrapper").toggleClass("toggled");
+    // });
     </script>
 
   </body>
